2006-03-28  Adam Jackson  <ajax@freedesktop.org>

	* afb/afbbitblt.c:
	* afb/afbcmap.c:
	* afb/afbfillarc.c:
	* afb/afbfillrct.c:
	* afb/afbpushpxl.c:
	* afb/afbscrinit.c:
	* afb/afbzerarc.c:
	* hw/dmx/input/usb-other.c:
	* hw/xfree86/common/xf86xv.c:
	* hw/xfree86/dri/dri.c:
	* hw/xfree86/fbdevhw/fbdevhw.c:
	* hw/xfree86/i2c/fi1236.c:
	* hw/xfree86/i2c/msp3430.c:
	* hw/xfree86/i2c/uda1380.c:
	* hw/xfree86/xf4bpp/ppcGetSp.c:
	* hw/xfree86/xf8_16bpp/cfbscrinit.c:
	* hw/xfree86/xf8_32bpp/cfbimage.c:
	More warning cleanup.

2006-03-28  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Fix another typo.
	
	* configure.ac: 
	* GL/glx/Makefile.am: Fix a couple of typos.

2006-03-27  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/common/xf86Module.h:
	* hw/xfree86/loader/loader.c: (LoaderGetABIVersion):
	* hw/xfree86/loader/xf86sym.c:
	Add a new export, LoaderGetABIVersion.  This function allows
	modules to query the versions directly instead of having to guess.
	Bug #6416: Add LoaderGetABIVersion.

2006-03-27  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac:
	* GL/glx/Makefile.am: Add --enable-glx-tls ./configure option to
	enable use of TLS for storing current GL context.  Use this option
	to let AIGLX load DRI drivers compiled for TLS.

2006-03-27  Adam Jackson  <ajax@freedesktop.org>

	* include/regionstr.h:
	* include/scrnintstr.h:
	* mi/miscrinit.c:
	Remove long-dead screen region code.

	* Xext/panoramiX.c:
	* Xext/security.c:
	* Xext/xevie.c:
	* Xprint/AttrValid.h:
	* Xprint/Oid.h:
	* dbe/dbe.c:
	* dbe/midbe.c:
	* dix/devices.c:
	* dix/events.c:
	* dix/window.c:
	* mi/miarc.c:
	* mi/mioverlay.c:
	* miext/shadow/shadow.h:
	* os/connection.c:
	* os/xdmauth.c:
	* record/record.c:
	* render/mipict.c:
	Big old pile of warning fixes.

	* configure.ac:
	Silence some editorializing in the configure help text.

2006-03-25  Daniel Stone  <daniel@freedesktop.org>

	* xkb/xkbUtils.c:
	Fix two of the more glaring unconditional-NULL-dereference screwups.